# parallel_ra

./: CMakeLists.txt
MPI_mock/: Makefile  yes-partition.cpp  yes-partition.json  yes-partition_0.cpp  yes-partition_1.cpp  yes-partition_2.cpp  yes-partition_3.cpp
core/: CMakeLists.txt
data_struct/: CMakeLists.txt  hashset.h  relation.cpp  relation.h  test_hashset.cpp  tuple.h
examples/: CMakeLists.txt  TC.cpp  data_parser.c  data_parser.cpp  nTC.cpp  test_mpi_all_to_all.c  test_mpi_all_to_all.cpp
hash/: array.h  array.h~  compat.h~  hashset.h  hashtable.h  hashtable.h~  main  main.cpp  main.cpp~  string.h  twohashtable.h  twohashtable.h~  twohashtable_vector.h
mpi_souffle/: Makefile  TC_mpi.cpp  data_parser.c  partition_input_relations.cpp
mpi_souffle/souffle/: CompiledRamRelation.h  ReadStreamCSV.h
ra/: CMakeLists.txt  ra_operations.h
ra/join/: join.h
