#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/core)
#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/ra)
#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/data_struct)

INCLUDE_DIRECTORIES(../core)
INCLUDE_DIRECTORIES(../ra)
INCLUDE_DIRECTORIES(../data_struct)

SET(EXAMPLES_LINK_LIBS core ra) 

INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
SET(EXAMPLES_LINK_LIBS ${EXAMPLES_LINK_LIBS} ${MPI_LIBRARIES})

ADD_EXECUTABLE(TC "TC.cpp")
TARGET_LINK_LIBRARIES(TC ${EXAMPLES_LINK_LIBS})
